# datario

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.dbt/: profiles.yml
datario/: dbt_project.yml
datario/models/: schema.yml
datario/models/staging/: brt_frota_ativa.sql  brt_table.sql
extract/: flows.py  run.py  schemas.py  tasks.py
init-sql/: init.sql
pipelines/: flows.json  flows.py  run.py  schemas.py  tasks.py  utils.py
queries/: dbt_project.yml
queries/models/: schema.yml
queries/models/staging/: brt_frota_ativa.sql  schema.yml
src/: flows.py  run.py  schemas.py  tasks.py
